chore: update app configuration and enhance project structure with ESLint and Prettier integration

--- a/client/app.json
+++ b/client/app.json
@@ -1,15 +1,30 @@
 {
   "expo": {
-    "name": "ContractAssistant",
-    "slug": "ContractAssistant",
+    "name": "合同助手",
+    "slug": "contract-assistant",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "contractassistant",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff",
+      "dark": {
+        "backgroundColor": "#000000"
+      }
+    },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.contractassistant.app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app needs access to the camera to scan contracts.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to select contract images.",
+        "NSDocumentsFolderUsageDescription": "This app needs access to documents to upload contracts."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -18,12 +33,15 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
+      "package": "com.contractassistant.app",
+      "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "INTERNET"],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "bundler": "metro"
     },
     "plugins": [
       "expo-router",
@@ -43,6 +61,14 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "YOUR_PROJECT_ID"
+      }
     }
   }
 }
