feat: add production environment configuration and application constants
- Created a new production environment configuration file with API URL, debug mode, file size limits, and logging options.
- Introduced application constants to manage API settings, application environment, upload configurations, and analysis polling intervals.

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,3 +4,40 @@
 
 expo-env.d.ts
 # @end expo-cli
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# Native builds
+ios/
+android/
+
+# Testing
+coverage/
+
+# Debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
