feat(auth): implement authentication screens (login, register, forgot password) with validation and navigation feat(tabs): add analysis, favorites, and profile screens with basic UI and state management chore: configure metro bundler for the project

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,6 +15,7 @@
       "@/components/*": ["./components/*", "./src/components/*"],
       "@/screens/*": ["./src/screens/*"],
       "@/hooks/*": ["./hooks/*", "./src/hooks/*"],
+      "@/stores": ["./src/stores/index.ts"],
       "@/stores/*": ["./src/stores/*"],
       "@/services/*": ["./src/services/*"],
       "@/utils/*": ["./src/utils/*"],
