--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "合同助手",
+    "name": "Contract Assistant",
     "slug": "contract-assistant",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -8,6 +8,7 @@
     "scheme": "contractassistant",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "platforms": ["ios", "android", "web"],
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
@@ -20,6 +21,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.contractassistant.app",
+      "associatedDomains": ["applinks:contractassistant.app"],
       "infoPlist": {
         "NSCameraUsageDescription": "This app needs access to the camera to scan contracts.",
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to select contract images.",
@@ -36,7 +38,21 @@
       "package": "com.contractassistant.app",
       "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "INTERNET"],
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "contractassistant.app",
+              "pathPrefix": "/"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "output": "static",
