--- a/client/package.json
+++ b/client/package.json
@@ -38,30 +38,32 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.69.0",
-    "react-native": "0.83.1",
-    "react-native-gesture-handler": "~2.30.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~4.2.1",
+    "react-native-reanimated": "~4.1.6",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.19.0",
+    "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.7.1",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/node": "^25.0.3",
-    "@types/react": "~19.2.7",
+    "@types/react": "~19.1.17",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
+    "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
