--- a/server/.gitignore
+++ b/server/.gitignore
@@ -37,10 +37,15 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
 .env.local
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+
+# Keep example files
+!.env.example
 
 # temp directory
 .temp
