feat: enhance server with health check endpoints and error handling
- Updated pnpm workspace configuration to include only built dependencies.
- Added @nestjs/terminus for health checks in the server package.
- Implemented HealthController with endpoints for health, liveness, and readiness checks.
- Created a global HttpExceptionFilter for consistent error responses.
- Introduced TransformInterceptor for standardizing API responses.
- Added constants for standard error and success messages.
- Enhanced main.ts with security features using helmet and improved validation pipes.
- Configured Swagger for API documentation with detailed descriptions and tags.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "contract-assistant",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "workspaces": [
+    "client",
+    "server",
+    "official-website"
+  ],
+  "scripts": {
+    "dev:server": "pnpm --filter=server run start:dev",
+    "dev:client": "pnpm --filter=client run start"
+  }
 }
