feat: add authentication module with JWT and local strategies
- Implemented AuthModule with JWT and local authentication strategies.
- Created AuthController for user registration, login, logout, and profile retrieval.
- Added guards for JWT and local authentication.
- Integrated user registration and login functionality with Prisma.
- Enhanced UserController to protect routes with JWT authentication.
- Added database initialization and seeding scripts for development.
- Created Prisma migrations for user and contract-related tables.
- Updated health check endpoint to include database schema verification.

--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:init": "ts-node scripts/init-db.ts",
+    "db:migrate": "prisma migrate deploy",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -25,6 +35,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/terminus": "^11.0.0",
@@ -35,6 +47,9 @@
     "class-validator": "^0.14.3",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
