feat: implement ContractService with CRUD operations and DTOs for contract management
- Add ContractService for creating, updating, retrieving, and deleting contracts.
- Implement filtering, sorting, and pagination for contract retrieval.
- Create DTOs for contract creation, updating, filtering, and response formatting.
- Introduce Document Processing Module for handling various document types.
- Implement PDF and DOCX processing with metadata extraction.
- Add unit tests for ContractService to ensure functionality.

--- a/server/package.json
+++ b/server/package.json
@@ -45,11 +45,16 @@
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "docx": "^9.5.1",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
@@ -68,6 +73,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
