--- a/client/.env.example
+++ b/client/.env.example
@@ -1,14 +1,14 @@
-"# API Configuration"  
-"EXPO_PUBLIC_API_URL=http://localhost:3000/api"  
-"EXPO_PUBLIC_API_TIMEOUT=30000"  
-""  
-"# App Configuration"  
-"EXPO_PUBLIC_ENV=development"  
-"EXPO_PUBLIC_DEBUG=true"  
-"EXPO_PUBLIC_ENABLE_LOGGING=true"  
-""  
-"# Upload Configuration"  
-"EXPO_PUBLIC_MAX_FILE_SIZE=10"  
-""  
-"# Analysis Configuration"  
-"EXPO_PUBLIC_POLLING_INTERVAL=3000" 
+# API Configuration
+EXPO_PUBLIC_API_URL=http://localhost:3000/api/v1
+EXPO_PUBLIC_API_TIMEOUT=30000
+
+# App Configuration
+EXPO_PUBLIC_ENV=development
+EXPO_PUBLIC_DEBUG=true
+EXPO_PUBLIC_ENABLE_LOGGING=true
+
+# Upload Configuration
+EXPO_PUBLIC_MAX_FILE_SIZE=10
+
+# Analysis Configuration
+EXPO_PUBLIC_POLLING_INTERVAL=3000
