--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -52,7 +52,17 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "expo-secure-store": "~15.0.8",
+    "@supabase/supabase-js": "^2.57.4",
+    "@react-oauth/google": "^0.12.2",
+    "@invertase/react-native-apple-authentication": "^2.4.1",
+    "react-apple-signin-auth": "^1.1.2",
+    "expo-apple-authentication": "~8.0.8",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-get-random-values": "~1.11.0",
+    "expo-web-browser": "~15.0.10",
+    "expo-image": "~3.0.11"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
