feat: 更新全局的axios

--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@invertase/react-native-apple-authentication": "^2.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.29",
+    "expo-apple-authentication": "~8.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-document-picker": "^14.0.8",
@@ -36,33 +40,28 @@
     "expo-linking": "~8.0.10",
     "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
+    "react-apple-signin-auth": "^1.1.2",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.69.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.6",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.9",
-    "expo-secure-store": "~15.0.8",
-    "@supabase/supabase-js": "^2.57.4",
-    "@react-oauth/google": "^0.12.2",
-    "@invertase/react-native-apple-authentication": "^2.4.1",
-    "react-apple-signin-auth": "^1.1.2",
-    "expo-apple-authentication": "~8.0.8",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-get-random-values": "~1.11.0",
-    "expo-web-browser": "~15.0.10",
-    "expo-image": "~3.0.11"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
