fix: 修复接口问题

--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
   "scripts": {
     "dev:server": "pnpm --filter=server run start:dev",
     "dev:client": "pnpm --filter=client run start"
-  }
+  },
+  "packageManager": "pnpm@10.28.0"
 }
