--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,7 +11,7 @@ FROM node:lts-buster-slim AS development
 # Create app directory
 WORKDIR /usr/src/app
 
-COPY package.json package-lock.json ./
+COPY package.json  ./
 
 COPY . .
 
