--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,34 +1,23 @@
-# syntax=docker/dockerfile:1.4
+# Use the official Node.js image as the base image
+FROM node:20
 
-FROM node:lts-buster-slim AS base
+# Set the working directory inside the container
 WORKDIR /usr/src/app
 
-# --- 依赖阶段 ---
-FROM base AS dependencies
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
-# 只安装依赖，这层会被缓存
+
+# Install the application dependencies
 RUN npm install
 
-# --- 构建阶段 ---
-FROM base AS builder
-COPY --from=dependencies /usr/src/app/node_modules ./node_modules
+# Copy the rest of the application files
 COPY . .
 
-RUN npm run db:generate
-# 在构建镜像时就完成编译！
+# Build the NestJS application
 RUN npm run build
 
-# --- 生产运行阶段 ---
-FROM base AS production
-ENV NODE_ENV=production
-
-# 从前面的阶段拷贝必要文件，不拷贝源码
-COPY --from=dependencies /usr/src/app/node_modules ./node_modules
-COPY --from=builder /usr/src/app/dist ./dist
-COPY package.json ./
-
-# 暴露端口
+# Expose the application port
 EXPOSE 3000
 
-# 此时 dist/main 已经确定存在于镜像中了
+# Command to run the application
 CMD ["node", "dist/main"]
